# schoolapi

./: .gitignore  Cargo.toml  README.md
migrations/2021-08-09-033148_school/: down.sql  up.sql
src/: lib.rs  models.rs  thing.rs
src/api/: db_connections.rs  mod.rs  school_endpoints.rs
src/db/: common.rs  mod.rs  school.rs  table.rs
src/models/: mod.rs  schema.rs  school.rs
