[package]
name = "schoolapi"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
error-chain = "^0.12.4"
rocket = "0.5.0-rc.1"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]
